--- a/style.css
+++ b/style.css
@@ -1,14 +1,28 @@
 body {
-    background: linear-gradient(135deg, #080d14, #000818);
-} 
+    background: linear-gradient(135deg, #152337, #000818);
+}
+
+html {
+    scroll-behavior: smooth;
+}
 
 .navbar {
+    position: sticky;
     background: #1f2937;
     overflow: hidden;
-    height: 40px;
-    border-radius: 10px;
-    z-index: 1;
-    box-shadow: 0 0 8px #00adb5, 0 0 8px #bb3fbb;
+    height: 45px;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: box-shadow 0.3s ease;
+    z-index: 1000;
+    background: transparent; 
+}
+
+.navbar.scrolled {
+    box-shadow: 0 0 5px #00ff88;
+    backdrop-filter: blur(8px);
 }
 
 .navbar ul {
@@ -202,4 +216,23 @@ a {
     color: #00ff88 !important;
     text-shadow: 0 0 10px #00ff88;
     transition: all 0.3s ease-in-out;
+}
+
+#us {
+    color: white;
+    margin-top: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+    font-size: xx-large;
+    justify-content: center;
+    text-align: center;
+}
+
+#slogan {
+    color: white;
+    margin-top: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 400;
+    justify-content: center;
+    text-align: center;
 }
