--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ footer {
     align-items: center;
     height: 180px;
     justify-content: space-between;
+    display: flex;
+    justify-content: center; /* canh ngang giữa */
+    gap: 10px; /* khoảng cách giữa các div */
+}
+
+.order {
+    width: 60px;
+    height: 60px;
+    background: lightblue;
+    text-align: center;
+    line-height: 60px;
 }
 
 .navbar {
