--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ footer {
 .order {
     width: 60px;
     height: 60px;
-    background: lightblue;
+    background: rgb(24, 100, 199);
     text-align: center;
     line-height: 60px;
 }
